# openapi.yaml
@@ -794,6 +794,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/withdraw_pass:
+        post:
+            tags:
+                - App
+            operationId: App_AdminWithdrawPass
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AdminWithdrawPassRequest_SendBody'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminWithdrawPassReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/app_server/fee_reward_list:
         get:
             tags:
@@ -1315,6 +1339,15 @@ components:
                     type: string
                 status:
                     type: string
+        AdminWithdrawPassReply:
+            type: object
+            properties: {}
+        AdminWithdrawPassRequest_SendBody:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
         AdminWithdrawReply:
             type: object
             properties: {}
